--- a/app/src/main/res/layout-land/layout1.xml
+++ b/app/src/main/res/layout-land/layout1.xml
@@ -14,12 +14,14 @@
         android:layout_height="60dp"
         android:layout_below="@+id/tvIntro"
         android:text="@string/bt"
+        android:enabled="false"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/button" />
     <TextView
         android:layout_width="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_marginRight="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/bt1"
         android:id="@+id/tv1Cnt"
