--- a/app/src/main/res/layout-land/layout2.xml
+++ b/app/src/main/res/layout-land/layout2.xml
@@ -5,6 +5,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_marginRight="100dp"
         android:text="@string/intro2"
         android:id="@+id/tvIntro2"
         android:layout_marginTop="20dp"/>
@@ -15,7 +16,6 @@
         android:layout_height="150dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvIntro2"
-        android:layout_marginTop="60dp"
         android:background="@drawable/editext" />
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,14 +68,14 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="40dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="126dp"
+        android:layout_marginBottom="11dp"
         android:gravity="center_horizontal"
+        android:onClick="sendMessage2"
         android:text="@string/back"
         android:textSize="5dp"
-        android:textStyle="bold"
-        android:onClick="sendMessage2"/>
+        android:textStyle="bold" />
 </RelativeLayout>
