--- a/app/src/main/res/layout-port/layout1.xml
+++ b/app/src/main/res/layout-port/layout1.xml
@@ -14,6 +14,7 @@
         android:layout_height="60dp"
         android:layout_below="@+id/tvIntro"
         android:text="@string/bt"
+        android:enabled="false"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp"
         android:background="@drawable/button" />
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:gravity="center_horizontal"
         android:layout_height="wrap_content"
+        android:layout_marginRight="100dp"
         android:id="@+id/tv1Cnt"
         android:layout_below="@id/bt1"
         android:layout_marginTop="20dp" />
