--- a/app/src/main/res/layout-port/layout2.xml
+++ b/app/src/main/res/layout-port/layout2.xml
@@ -6,6 +6,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="@string/intro2"
+        android:layout_marginRight="100dp"
         android:id="@+id/tvIntro2"
         android:layout_marginTop="20dp"/>
 
@@ -68,8 +69,8 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="40dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="126dp"
